# devinlittle-net

./: .gitattributes  .gitignore  BUILD.md  Cargo.toml  Dockerfile.auth_backend  Dockerfile.gradegetter  Dockerfile.gradegetter_backend  Dockerfile.nanopass_backend  Dockerfile.notification_backend  Dockerfile.service_connector  Dockerfile.smalltalk_backend  Justfile  NOTICE  README.md  docker-bake.hcl  jsconfig.json  package.json  pnpm-lock.yaml  rust-analyzer.toml  svelte.config.js  tsconfig.json  vite.config.js
.sqlx/: query-06cf133bcd96c778598426094fa56a33d08b66c45b2e8a489ca6a0dfc5924c32.json  query-26aa58f57faa3144eb9f15218fadccc5f0f76c323e5fb75dbc3b7a70e010ca70.json  query-4f969a117a94fbeca480b0a9dd55a80158cf037f597dcb908a96b93235c04648.json  query-5df5df15a6857c5f5f947a7c0e35b627fbc36264c059594a7501276584861b49.json  query-de2842b1b73a2799298e3286f000b495f119d94d6b6ee52dabe71744e54c1cc5.json
apps/: Justfile
apps/core/: Cargo.toml
apps/dln-cli/: Cargo.toml
apps/dln-cli/src/: main.rs
apps/dln-ui/: .gitignore  Cargo.toml  build.rs
apps/dln-ui/qml/: AnimatedCounter.qml  main.qml
apps/dln-ui/src/: main.rs
auth_backend/: Cargo.toml
auth_backend/migrations/: 20260402192424_refresh_token.sql
auth_backend/src/middleware/: jwt.rs
auth_backend/src/routes/: admin.rs  auth.rs  internal.rs  mod.rs  user.rs
auth_backend/src/util/: hash.rs
chart/: README.md
common/: Cargo.toml  build.rs
common/protos/: gradegetter_backend.proto  mesh_network.proto  nanopass_backend.proto  notification_backend.proto  service_connector.proto  smalltalk_backend.proto
common/src/: auth.rs  gradegetter.rs  lib.rs  notification.rs  smalltalk.rs  tracing.rs
crates/crypto_utils/: Cargo.toml  README.md
crates/dln-core/: Cargo.toml
crates/dln-core/src/: lib.rs  structs.rs
crates/friendly-namer/: Cargo.toml  README.md
docs/man/: dlncli.md
frontend/website/: README.md  package.json  svelte.config.js  tsconfig.json
frontend/website/static/: manifest.json
gradegetter/crypto_utils/: Cargo.toml
gradegetter/crypto_utils/src/: lib.rs
gradegetter/gradegetter/: Cargo.toml
gradegetter/gradegetter/src/: main.rs
gradegetter/gradegetter_backend/: Cargo.toml
gradegetter/gradegetter_backend/migrations/: 20250910174919_grades.sql
gradegetter/gradegetter_backend/src/: main.rs
nanopass_backend/: Cargo.toml
nanopass_backend/src/: main.rs
nanopass_backend/src/middleware/: jwt.rs
nanopass_backend/src/routes/: files.rs  internal.rs  mod.rs
notification_backend/: Cargo.toml
notification_backend/src/: main.rs
notification_backend/src/middleware/: jwt.rs
notification_backend/src/routes/: internal.rs  noties.rs
scripts/: .gitignore  qmake  qmake_fake_wrapper  update-types.sh
service_connector/: Cargo.toml  build.rs
service_connector/src/: main.rs
services/: Cargo.toml  Dockerfile.auth_backend  Justfile  README.md  docker-bake.hcl
services/.sqlx/: query-50b4099ac9d5b886be583da3cc636b5eedefd785dd4384856435f6db2bcc0f47.json  query-5a1953c3f12adb9cd2c05e7090d9cd5a45b2df40e4d07cd8323679ba90085e18.json  query-82d69e366eb21c63808cd3aa52f75a53bf93a077e3f7d7015a1c3b98437c8920.json  query-b2c5700480348cdc7eac8c878cb95153dfa5a91c4e4b368fc4d70f692b616cf7.json  query-e0a98ca58b73ab57aa6dbd7726845740cd01dace997da5d214d44e5382421875.json
services/auth_backend/: Cargo.toml  Dockerfile  README.md  env.template
services/auth_backend/src/: main.rs
services/auth_backend/src/middleware/: jwt.rs
services/auth_backend/src/routes/: admin.rs  auth.rs  internal.rs  mod.rs  user.rs
services/backend-common/: Cargo.toml
services/backend-common/protos/: auth_backend.proto  gradegetter.proto  service_connector.proto
services/backend-common/src/: lib.rs  tracing.rs
services/common/src/: auth.rs  internal.rs  smalltalk.rs
services/gradegetter/: Dockerfile.gradegetter  Dockerfile.gradegetter_backend  README.md
services/gradegetter/gradegetter/: Cargo.toml  env.template
services/gradegetter/gradegetter/src/: main.rs
services/gradegetter/gradegetter_backend/: Cargo.toml  env.template
services/gradegetter/tokengetter/: package.json
services/nanopass_backend/: Cargo.toml  Dockerfile  README.md
services/nanopass_backend/src/: main.rs
services/notification_backend/: Cargo.toml  Dockerfile  README.md
services/notification_backend/src/: main.rs
services/notification_backend/src/middleware/: jwt.rs
services/notification_backend/src/routes/: internal.rs  mod.rs  noties.rs
services/notification_backend/src/utils/: jwt.rs  mod.rs
services/service_connector/: Cargo.toml  Dockerfile  README.md  build.rs  env.template
services/service_connector/proto/: service_connector.proto
services/service_connector/src/: main.rs
services/smalltalk_backend/: Cargo.toml  Dockerfile
smalltalk_backend/: Cargo.toml
smalltalk_backend/migrations/: 20260510185056_smalltalk_notes_groups.sql  20260511203412_smalltalk_notes.sql
smalltalk_backend/src/: main.rs
smalltalk_backend/src/middleware/: jwt.rs
smalltalk_backend/src/routes/: mod.rs  notes.rs
src/: app.html  hooks.server.ts  service-worker.ts
src/lib/comps/: Notifications.svelte  Preview.svelte
src/lib/idle_protocol/: idle_protocol.js
src/lib/types/: auth.api.ts  gradegetter.api.ts  nanopass.api.ts  nanopass.types.ts  notification.api.ts  notification.ts  smalltalk.api.ts  smalltalk.types.ts
src/lib/utils/: auth.svelte.js  auth.svelte.ts  constants.svelte.ts  gradegetter.svelte.ts  index.js  nanopass.svelte.ts  nanopass.types.ts  notifications.svelte.js  notifications.svelte.ts  smalltalk.svelte.ts  smalltalk.types.ts  sqlite.svelte.ts  wordlist.json
src/routes/: +layout.svelte  +page.svelte  Header.svelte  styles.css
src/routes/airtips/: +page.svelte
src/routes/auth/: +page.svelte
src/routes/calc/: +page.svelte
src/routes/gradegetter/: +layout.svelte  +page.svelte
src/routes/idle_protocol/: +page.svelte
src/routes/minecraft_lab/: +page.svelte
src/routes/nanopass/: +page.svelte
src/routes/podcast/: +page.svelte
src/routes/projects/: +page.svelte
static/.hist/: up2k.snap
(+52 files in other folders)
