[package]
name = "common"
version = "0.1.0"
edition = "2024"

[features]
auth = ["dep:sqlx"]
gradegetter = []
nanopass = []
notifications = []
smalltalk = ["dep:sqlx"]

[dependencies]
serde.workspace = true
serde_json.workspace = true
serde_with.workspace = true
chrono.workspace = true
utoipa.workspace = true
uuid.workspace = true
strum.workspace = true
sqlx = { workspace = true, optional = true }
dotenvy.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true
tracing-opentelemetry.workspace = true
opentelemetry.workspace = true
opentelemetry_sdk.workspace = true
opentelemetry-otlp.workspace = true
