[package]
name = "nanopass_backend"
version = "0.0.1"
edition = "2024"

[dependencies]
common = { workspace = true, features = ["nanopass", "notifications"]}

tokio.workspace = true
axum = { workspace = true, features = ["ws", "macros"] }
axum-extra = {workspace = true, features = ["typed-header"]}
axum-server = {workspace = true}
axum-prometheus.workspace = true
hyper.workspace = true
hyper-tls.workspace = true
tower-http.workspace = true
tower.workspace = true
utoipa.workspace = true
utoipa-swagger-ui.workspace = true
rustls.workspace = true
reqwest = { workspace = true, features = ["json"]}
serde.workspace = true
serde_json = { workspace = true, features = ["raw_value"]  }
anyhow.workspace = true

uuid.workspace = true
chrono.workspace = true
jsonwebtoken.workspace = true
base64.workspace = true
dashmap.workspace = true

tracing.workspace = true
tracing-subscriber.workspace = true

dotenvy.workspace = true
constant_time_eq.workspace = true
