[package]
name = "dln-ui"
version = "0.1.0"
authors.workspace = true
repository.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
dln-core.workspace = true

cxx = "1.0.194"
cxx-qt = "0.9"
cxx-qt-lib = { version="0.9", features = ["full"] }
cxx-qt-lib-extras = "0.9"

[build-dependencies]
cxx-qt-build = { version = "0.9", features = [ "link_qt_object_files" ] }
