[package]
name = "dln-ui"
version = "0.1.0"
authors.workspace = true
repository.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
dln-core.workspace = true

cxx.workspace = true
cxx-qt.workspace = true
cxx-qt-lib.workspace = true
cxx-qt-lib-extras.workspace = true

[build-dependencies]
cxx-qt-build.workspace = true
