[package]
name = "crypto_utils"
version = "1.0.1"
edition.workspace = true
authors.workspace = true
repository.workspace = true
license = "LGPL-3.0-only"

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
aes-gcm.workspace = true
aes.workspace = true
rand.workspace = true
base64.workspace = true
dotenvy.workspace = true
tracing.workspace = true
