[package]
name = "dln-core"
version = "0.1.0"
authors.workspace = true
repository.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
backend-common = { workspace = true, features = ["client"] }
aws-lc-rs.workspace = true
serde.workspace = true

arc-swap.workspace = true
uuid.workspace = true

[target.'cfg(not(target_os = "windows"))'.dependencies]
openssl.workspace = true

[target.'cfg(target_os = "windows")'.dependencies]
curl.workspace = true
