[package]
name = "auth_backend"
version = "0.0.1"
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
backend-common = { workspace = true, features = ["auth"] }

tokio.workspace = true
axum.workspace = true
axum-extra = {workspace = true, features = ["typed-header"]}
axum-server = {workspace = true}
axum-prometheus.workspace = true
hyper.workspace = true
hyper-tls.workspace = true
tower-http.workspace = true
tower.workspace = true
utoipa.workspace = true
utoipa-scalar.workspace = true
rustls.workspace = true
reqwest = {workspace = true, features = ["json"]}
serde.workspace = true
serde_json = { workspace = true, features = ["raw_value"]  }
anyhow.workspace = true
sqlx.workspace = true
sha2.workspace = true
argon2.workspace = true
uuid.workspace = true
jsonwebtoken.workspace = true
chrono = {workspace = true, features = ["serde"]}
base64.workspace = true
rand.workspace = true

tracing.workspace = true
tracing-subscriber.workspace = true
opentelemetry.workspace = true 

dotenvy.workspace = true
constant_time_eq.workspace = true

[package.metadata.deb]
maintainer = "Devin Little <devinlittlee@gmail.com>"
copyright = "2026, Devin Little <devinlittlee@gmail.com>"
#license-file = ["LICENSE", "4"]
extended-description = """\
bruh i cant anyomre its my backend service thats it."""
depends = "$auto"
section = "utility"
priority = "optional"
assets = [
    ["target/release/backend", "usr/bin/", "755"],
    ["res/init/systemd/backend.service", "usr/lib/systemd/sytstem/", "755"],
    ["env.template", "etc/backend/env", "755"],
]
