[package]
name = "backend-common"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[features]
auth = ["dep:sqlx"]
gradegetter = []
notifications = []
nanopass = []
smalltalk = ["dep:sqlx"]

client = [
  "auth",
  "gradegetter",
  "nanopass",
  "notifications",
  "smalltalk"
]

internal = ["tracing", "webrtc", "tonic"]
tracing = [
  "dep:tracing",
  "dep:tracing-subscriber",
  "dep:tracing-appender",
  "dep:tracing-opentelemetry",
  "opentelemetry"
]
opentelemetry = [
  "dep:opentelemetry",
  "dep:opentelemetry_sdk",
  "dep:opentelemetry-otlp"
]
webrtc = ["dep:webrtc"]
tonic = ["dep:tonic", "dep:prost", "dep:tonic-prost"]
sqlx = ["dep:sqlx"]

[dependencies]
tokio.workspace = true
tokio-stream.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_with.workspace = true
chrono.workspace = true
utoipa = { workspace = true, features = ["macros"] }
uuid.workspace = true
dashmap.workspace = true
anyhow.workspace = true
thiserror.workspace = true
strum.workspace = true
dotenvy.workspace = true
sqlx = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }
tracing-subscriber = { workspace = true, optional = true }
tracing-appender = { workspace = true, optional = true }
tracing-opentelemetry = { workspace = true, optional = true }
opentelemetry = { workspace = true, optional = true }
opentelemetry_sdk = { workspace = true, optional = true }
opentelemetry-otlp = { workspace = true, optional = true }
tonic = { workspace = true, optional = true }
prost = { workspace = true, optional = true }
tonic-prost = { workspace = true, optional = true }
webrtc = { workspace = true, optional = true }

[build-dependencies]
anyhow.workspace = true
tonic-prost-build.workspace = true
