[package]
name = "notification_backend"
version = "0.0.1"
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
backend-common = { workspace = true, features = ["notifications", "nanopass"]}

tokio.workspace = true
axum = { workspace = true, features = ["ws"] }
axum-extra = {workspace = true, features = ["typed-header"]}
axum-server = {workspace = true}
axum-prometheus.workspace = true
hyper.workspace = true
hyper-tls.workspace = true
tower-http.workspace = true
tower.workspace = true
utoipa.workspace = true
utoipa-scalar.workspace = true
rustls.workspace = true
reqwest = { workspace = true, features = ["json"]}
serde.workspace = true
serde_json = { workspace = true, features = ["raw_value"]  }
anyhow.workspace = true

sqlx.workspace = true
uuid.workspace = true
jsonwebtoken.workspace = true
chrono.workspace = true
web-push.workspace = true
crypto_utils.workspace = true
base64.workspace = true
dashmap.workspace = true

tracing.workspace = true
tracing-subscriber.workspace = true

dotenvy.workspace = true
constant_time_eq.workspace = true
