[package]
name = "service_connector"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
backend-common.workspace = true

tokio.workspace = true
tokio-stream.workspace = true
tracing.workspace = true
anyhow.workspace = true
tonic.workspace = true
tonic-reflection.workspace = true
prost.workspace = true
tonic-prost.workspace = true
dashmap.workspace = true
uuid.workspace = true

[build-dependencies]
anyhow.workspace = true
tonic-prost-build.workspace = true

