[package]
name = "gradegetter"
version = "0.0.1"
edition = "2024"

[dependencies]
common = {workspace = true, features = ["gradegetter"]}

reqwest = { workspace = true, features = ["form", "query"]}
tokio.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
scraper.workspace = true
sqlx.workspace = true
uuid.workspace = true
dotenvy.workspace = true
crypto_utils.workspace = true
anyhow.workspace = true
tokio-tungstenite.workspace = true
futures-util.workspace = true
axum.workspace = true 
tracing.workspace = true
tracing-subscriber.workspace = true
