[package]
name = "gradegetter"
version = "0.0.1"
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
backend-common = {workspace = true, features = ["gradegetter", "internal"]}

reqwest = { workspace = true, features = ["form", "query"]}
tokio.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
scraper.workspace = true
sqlx.workspace = true
uuid.workspace = true
dotenvy.workspace = true
crypto_utils.workspace = true
anyhow.workspace = true
tokio-tungstenite.workspace = true
futures-util.workspace = true
axum.workspace = true 
tracing.workspace = true
tracing-subscriber.workspace = true
